# fin

./: .env.example  .gitignore  Dockerfile  docker-compose.yml
backend/: .gitignore  pyproject.toml
backend/app/: database.py  main.py  portfolio_service.py  state.py
backend/app/routes/: chat.py  health.py  portfolio.py  stream.py  watchlist.py
backend/llm/: client.py
backend/market/: __init__.py  base.py  massive.py  simulator.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChartArea.tsx  ChatPanel.tsx  Header.tsx  Portfolio.tsx  TradeBar.tsx  Watchlist.tsx
frontend/src/types/: index.ts
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml
test/e2e/: ai-chat.spec.ts  fresh-start.spec.ts  package.json  playwright.config.ts  sse-reconnect.spec.ts  trading.spec.ts  watchlist.spec.ts
